2016-01-29  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/69547
	* g++.dg/tree-ssa/pr69547.C: New testcase.

2016-01-29  Jakub Jelinek  <jakub@redhat.com>

	PR debug/66869
	* g++.dg/warn/Wunused-function2.C: New test.

2016-01-29  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* gcc.dg/tree-ssa/ssa-dom-cse-2.c: Require a hardware vector
	support for test to succeed.

2016-01-29  Marek Polacek  <polacek@redhat.com>

	PR c++/69509
	PR c++/69516
	* g++.dg/ext/constexpr-vla2.C: New test.
	* g++.dg/ext/constexpr-vla3.C: New test.
	* g++.dg/ubsan/vla-1.C: Remove dg-shouldfail.

2016-01-29  Richard Biener  <rguenther@suse.de>

	PR middle-end/69537
	* gcc.dg/uninit-21.c: New testcase.

2016-01-28  Uros Bizjak  <ubizjak@gmail.com>

	PR target/69459
	* gcc.target/i386/pr69459.c: New test.

2016-01-28  Steve Ellcey  <sellcey@imgtec.com>

	PR target/68400
	* gcc.target/mips/mips.exp (mips_option_groups): Add stack-protector.
	* gcc.target/mips/pr68400.c: New test.

2016-01-28  Martin Sebor  <msebor@redhat.com>

	PR target/17381
	* gcc.target/powerpc/pr17381.c: New test.

2016-01-28  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/69542
	* gcc.dg/torture/pr69542.c: New test.

2016-01-28  Wilco Dijkstra  <wdijkstr@arm.com>

	* gcc.target/aarch64/ccmp_1.c: Fix test issue.

2016-01-28  David Edelsohn  <dje.gcc@gmail.com>

	* gcc.dg/pr65980.c: Skip on AIX.
	* gcc.dg/pr66688.c: Same.

2016-01-28  David Edelsohn  <dje.gcc@gmail.com>

	PR target/63679
	* gcc.dg/tree-ssa/sra-17.c: Adjust regex for more label styles.
	* gcc.dg/tree-ssa/sra-18.c: Same.

2016-01-28  Andre Vehreschild  <vehre@gcc.gnu.org>

	PR fortran/62536
	* gfortran.dg/block_15.f08: New test.
	* gfortran.dg/block_end_error_1.f90: Need to catch additional error
	on incorrectly closed BLOCK.

2016-01-28  Ilya Enkovich  <enkovich.gnu@gmail.com>

	* gcc.dg/declare-simd.c: New test.
2016-01-28  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/69466
	* gfortran.dg/vect/pr69466.f90: New testcase.
